ID구분 재수정